<resources>
    <string name="app_name">Mavericks</string>
    <string name="action_settings">Settings</string>
    <string name="login_fragment_label">Login</string>
    <string name="vehicles_fragment_label">Vehicles</string>
    <string name="vehicle_fragment_label">Vehicle</string>
    <string name="generic_error">Something went wrong, please try again</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_error">Login error</string>
    <string name="clicked_golf">Clicked on Golf!</string>
</resources>
